fix spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,5 +14,5 @@ span {
 }
 .wrapper {
   max-width: 1000px;
-  margin: 20px auto;
+  margin: 50px auto;
 }
